# ircord-installer

./: CMakeLists.txt  README.md
assets/: installer-manifest.example.json
src/: app.cpp  app.hpp  main.cpp  manifest.cpp  manifest.hpp  model.hpp
src/install/: installer.cpp  installer.hpp
src/system/: system.cpp  system.hpp
